--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biodiversidad amazónica</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 
 
 <body class="d-flex flex-column min-vh-100">
-    <!-- Header -->
+
     <header class="bg-dark text-white ">
         <div class="container d-flex flex-column align-items-center">
             <img src="imagenes/logo.png" alt="Logo de AmazonBio" class="mb-2" style="width: 150px;">
             <h1>AmazonBio</h1>
             
         </div>
-        <nav class="bg-secondary ">
+        <nav class="bg-danger ">
                 <ul class="nav justify-content-center">
                     <li class="nav-item"><a class="nav-link text-white" href="#" id="show-home">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="#" id="show-destacados">Lo más
@@ -37,7 +37,7 @@
 
 
 
-    <!-- Sección del banner dentro de un div contenedor -->
+
     <section id="banner-section" class="mb-4">
         <div id="carousel-container" class="carousel-container">
             <div id="carouselExample" class="carousel slide" data-ride="carousel">
@@ -540,7 +540,9 @@
                 maintainAspectRatio: false,
                 plugins: {
                     legend: { position: 'right', labels: { boxWidth: 12 } },
-                    title: { display: true, text: 'Distribución de Especies por Categoría' }
+                    title: { display: true, text: 'Distribución de Especies por Categoría', 
+                        color:'#ff0000'
+                    }
                 }
             }
         });
